--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "echarts": "^5.4.2",
     "element-ui": "^2.15.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
